--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-twitter-embed": "^3.0.3",
+    "semantic-ui-react": "^2.0.3",
     "typescript": "^4.3.4",
     "web-vitals": "^1.1.2"
   },
